--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
     "next": "11.1.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
